# project

./: .gitignore  BENCHMARK_REPORT.md  CMakeLists.txt  DATASET_NOTE.md  DEPENDENCY_NOTE.md  ENGINEERING_CONSTRAINTS.md  FORWARD_ALIGNMENT_REPORT.md  GAT-ZKML-单层多头.md  GAT-ZKML-多层多头.md  GAT-ZKML_终稿_修订版.md  MIGRATION_PLAN.md  NOTE_TO_CODE_MAP.md  OUTPUT_PROTOCOL.md  PROGRESS_LOG.md  PROJECT_GOAL.md  README.md  TEST_PLAN.md  prompt.txt  requirements-export.txt
build_cpu_check/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json
build_cpu_check/Testing/Temporary/: CTestCostData.txt
build_cuda/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json
build_cuda/Testing/Temporary/: CTestCostData.txt
cmake/: ConfigureMCL.cmake
configs/: citeseer_full.cfg  citeseer_train.cfg  cora_full.cfg  ogbn_arxiv_full.cfg  ogbn_arxiv_train.cfg  ppi_batch.cfg  ppi_batch_formal.cfg  pubmed_full.cfg  pubmed_train.cfg
data/cache/citeseer/: features.txt  meta.cfg
data/cache/cora/: features.txt  meta.cfg
data/cache/pubmed/: meta.cfg
docs/: FULL_GRAPH_MAINLINE.md  GPU_BACKEND.md  LEGACY_STATUS.md
include/gatzk/algebra/: domain_evaluation.hpp  eval_backend.hpp  field.hpp  packed_field.hpp  polynomial.hpp  vector_ops.hpp
include/gatzk/crypto/: curve.hpp  kzg.hpp  transcript.hpp
include/gatzk/data/: dataset.hpp  loader.hpp
include/gatzk/model/: gat.hpp
include/gatzk/protocol/: challenges.hpp  lookup.hpp  proof.hpp  prover.hpp  psq.hpp  quotients.hpp  schema.hpp  trace.hpp  verifier.hpp  zkmap.hpp
include/gatzk/util/: config.hpp  logging.hpp  route2.hpp
runs/cora_full/: summary.txt
runs/cora_full/cmp_cpu/: benchmark.txt
runs/cora_full/cmp_cpu_final/: benchmark.txt
runs/cora_full/cmp_cpu_fix/: benchmark.txt
runs/cora_full/cmp_gpu/: summary.txt
runs/cora_full/cmp_gpu2/: benchmark.txt  challenges.txt
runs/cora_full/cmp_gpu_dbg/: summary.txt
runs/cora_full/cmp_gpu_dbg2/: benchmark.txt  challenges.txt
runs/cora_full/cmp_gpu_dbg3/: benchmark.txt
runs/cora_full/cmp_gpu_dbg4/: benchmark.txt
runs/cora_full/cmp_gpu_dbg5/: benchmark.txt
runs/cora_full/cmp_gpu_dbg6/: summary.txt
runs/cora_full/cmp_gpu_final/: summary.txt
runs/cora_full/cmp_gpu_fix/: challenges.txt  summary.txt
runs/cora_full/perf_mainline_20260325/: benchmark.txt  commitment_order.txt
runs/cora_full/perf_mainline_20260325_b/: challenges.txt  summary.txt
runs/cora_full/perf_mainline_20260325_c/: summary.txt
runs/cora_full/perf_mainline_20260325_d/: summary.txt
runs/cora_full/prove_cpu_mainline2/: summary.txt
runs/cora_full/prove_gpu_cudaquot_exp/: benchmark.txt
runs/cora_full/prove_gpu_mainline2/: summary.txt
runs/cora_full/stack_rebuild_cpu_vparallel/: summary.txt
runs/cora_full/stack_rebuild_gpu_trace/: benchmark.txt
runs/cora_full/stack_rebuild_gpu_vparallel/: summary.txt
runs/cora_full/warm/: benchmark.txt  challenges.txt
scripts/: check_planetoid_parity.py  checkpoint_reader_compat.py  export_benchmark_table.py  export_gat_checkpoint.py  export_torch_gat_bundle.py  fetch_mcl.sh  gat_reference.py  import_ppi_bundle.py  ogbn_arxiv_utils.py  planetoid_utils.py  prepare_ogbn_arxiv.py  prepare_planetoid.py  prepare_ppi.py  train_ogbn_arxiv_gat.py  train_planetoid_gat.py  train_ppi_gat.py
src/: main.cpp
src/algebra/: cuda_backend.cu  cuda_field.cuh  eval_backend.cpp  eval_backend_cuda.cu  packed_field.cpp  polynomial.cpp  vector_ops.cpp  vector_ops_cuda.cu
src/crypto/: curve.cpp  kzg.cpp  transcript.cpp
src/data/: loader.cpp
src/model/: gat.cpp
src/protocol/: challenges.cpp  lookup.cpp  prover.cpp  psq.cpp  quotients.cpp  quotients_cuda.cu  schema.cpp  trace.cpp  verifier.cpp  zkmap.cpp
src/util/: config.cpp  logging.cpp  route2.cpp
tests/: test_main.cpp
